commit de ultimos detalles

--- a/markup/contacto.html
+++ b/markup/contacto.html
@@ -40,8 +40,8 @@
             <a href="index.html"><img src="../imgs/logo.png" class="header__logo" alt="logo de marca"></a>
         </div>
         <div class="header__redes"> 
-            <a href="https://www.behance.net/mate98dee399d"><img src="../imgs/iconos/behance_blanco.png" alt="behance" width="48px"></a>
-            <a href="https://www.linkedin.com/in/mateo-de-elias-82456a155/"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" width="48px"></a>
+            <a href="https://www.behance.net/CharlyBarros/appreciated"><img src="../imgs/iconos/behance_blanco.png" alt="behance" width="48px"></a>
+            <a href="https://www.linkedin.com/in/barroscarlosm/"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" width="48px"></a>
         </div>
     </header>
 
@@ -100,10 +100,10 @@
     <footer>
        <a href="index.html"><img src="../imgs/logo.png" alt="logo" class="footer__logo"></a>
        <div class="footer__container">
-            <a href="https://www.linkedin.com/in/mateo-de-elias-82456a155/" target="_blank"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" class="footer__icons"></a>
-            <a href="https://www.instagram.com/matedee/" target="_blank"><img src="../imgs/iconos/instagram_blanco.png" alt="instagram" height= "25px" width="auto" class="footer__icons"></a>
-            <a href="mailto:mate.98.dee@gmail.com"><img src="../imgs/iconos/mail_blanco.png" alt="mail" height= 25px width="auto" class="footer__icons"></a>
-            <a href="https://www.behance.net/mate98dee399d" target="_blank"><img src="../imgs/iconos/behance_blanco.png" alt="behance" height= "25px" width="auto" class="footer__icons"></a>  
+            <a href="https://www.linkedin.com/in/barroscarlosm/" target="_blank"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" class="footer__icons"></a>
+            <a href="https://www.instagram.com/charlieebarros/" target="_blank"><img src="../imgs/iconos/instagram_blanco.png" alt="instagram" height= "25px" width="auto" class="footer__icons"></a>
+            <a href="mailto:barroscarlosm@gmail.com"><img src="../imgs/iconos/mail_blanco.png" alt="mail" height= 25px width="auto" class="footer__icons"></a>
+            <a href="https://www.behance.net/CharlyBarros/appreciated" target="_blank"><img src="../imgs/iconos/behance_blanco.png" alt="behance" height= "25px" width="auto" class="footer__icons"></a>  
        </div>
        <div class="footer__legales">
         Desarrollado por Mateo de Elias.<br>
