--- a/markup/index.html
+++ b/markup/index.html
@@ -80,7 +80,7 @@
     </main>
 
     <section>
-        <h2>Cómo trabajo</h2>
+        <h2>Cómo trabajo:</h2>
             <div class="section__container"> 
                <div class="section__modus">
                     <img src="../imgs/iconos/lightbulbColor.png" alt="idea" width="30%" height="auto" class="section__tamaños"><br><br>
@@ -95,32 +95,6 @@
                     <p>Trabajo en conjunto con el cliente para lograr un diseño final que represente a los valores de la marca y solucione la problemática planteada.</p>    
                </div>
             </div><br><br>
-    </section>
-    <section class="section__carousel">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).jpg"
-                alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(16).jpg"
-                alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(17).jpg"
-                alt="Third slide">
-            </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-        </div>     
     </section>
 
     <footer>
