--- a/markup/portfolio.html
+++ b/markup/portfolio.html
@@ -50,8 +50,8 @@
             <a href="index.html"><img src="../imgs/logo.png" class="header__logo" alt="logo de marca"></a>
         </div>
         <div class="header__redes"> 
-            <a href="https://www.behance.net/mate98dee399d"><img src="../imgs/iconos/behance_blanco.png" alt="behance" width="48px"></a>
-            <a href="https://www.linkedin.com/in/mateo-de-elias-82456a155/"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" width="48px"></a>
+            <a href="https://www.behance.net/CharlyBarros/appreciated"><img src="../imgs/iconos/behance_blanco.png" alt="behance" width="48px"></a>
+            <a href="https://www.linkedin.com/in/barroscarlosm/"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" width="48px"></a>
         </div>
     </header>
 
@@ -78,25 +78,25 @@
     <main class="main__portfolio">
         <h1>Portfolio</h1>`
         <div class="gallery">
-            <a href="../imgs/portfolio/afiche 1 copia.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/afiche 1 chico.jpg" alt="afiche1"></a>
-            <a href="../imgs/portfolio/afiche 2 copia.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/afiche 2 chico.jpg" alt="afiche2"></a>
-            <a href="../imgs/portfolio/afiche 3 copia.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/afiche 3 chico.jpg" alt="afiche3"></a>
-            <a href="../imgs/portfolio/camaleon.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/camaleon chico.jpg" alt="camaleon1"></a>
-            <a href="../imgs/portfolio/lobo.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/lobo chico.jpg" alt="lobo"></a>
-            <a href="../imgs/portfolio/zorro.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/zorro chico.jpg" alt="zorro"></a>
-            <a href="../imgs/portfolio/camaleon2.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/camaleon2 chico.jpg" alt="camaleon2"></a>
-            <a href="../imgs/portfolio/lagarto.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/lagarto chico.jpg" alt="lagarto"></a>
-            <a href="../imgs/portfolio/tigre.jpg" data-lightbox="mygallery"><img src="../imgs/portfolio/tigre chico.jpg" alt="tigre"></a>
+            <a href="../imgs/portfolio/dialogos2020-2.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/dialogos2020-2.jpeg" alt="dialogos2"></a>
+            <a href="../imgs/portfolio/dialogos2020-1.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/dialogos2020-1.jpeg" alt="dialogos1"></a>
+            <a href="../imgs/portfolio/dialogos2020-4.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/dialogos2020-3.jpeg" alt="dialogos3"></a>
+            <a href="../imgs/portfolio/memorizarte1.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/memorizarte1.jpeg" alt="memorizarte1"></a>
+            <a href="../imgs/portfolio/memorizarte2.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/memorizarte2.jpeg" alt="memorizarte2"></a>
+            <a href="../imgs/portfolio/memorizarte3.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/memorizarte3.jpeg" alt="memorizarte3"></a>
+            <a href="../imgs/portfolio/boxeo2.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/boxeo2.jpeg" alt="boxeo2"></a>
+            <a href="../imgs/portfolio/boxeo1.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/boxeo1.jpeg" alt="boxeo1"></a>
+            <a href="../imgs/portfolio/boxeo3.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/boxeo3.jpeg" alt="boxeo3"></a>
         </div>
     </main>
 
     <footer>
        <a href="index.html"><img src="../imgs/logo.png" alt="logo" class="footer__logo"></a>
        <div class="footer__container">
-            <a href="https://www.linkedin.com/in/mateo-de-elias-82456a155/" target="_blank"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" class="footer__icons"></a>
-            <a href="https://www.instagram.com/matedee/" target="_blank"><img src="../imgs/iconos/instagram_blanco.png" alt="instagram" height= "25px" width="auto" class="footer__icons"></a>
-            <a href="mailto:mate.98.dee@gmail.com"><img src="../imgs/iconos/mail_blanco.png" alt="mail" height= 25px width="auto" class="footer__icons"></a>
-            <a href="https://www.behance.net/mate98dee399d" target="_blank"><img src="../imgs/iconos/behance_blanco.png" alt="behance" height= "25px" width="auto" class="footer__icons"></a>  
+            <a href="https://www.linkedin.com/in/barroscarlosm/" target="_blank"><img src="../imgs/iconos/linkedin_blanco.png" alt="linkedin" class="footer__icons"></a>
+            <a href="https://www.instagram.com/charlieebarros/" target="_blank"><img src="../imgs/iconos/instagram_blanco.png" alt="instagram" height= "25px" width="auto" class="footer__icons"></a>
+            <a href="mailto:barroscarlosm@gmail.com"><img src="../imgs/iconos/mail_blanco.png" alt="mail" height= 25px width="auto" class="footer__icons"></a>
+            <a href="https://www.behance.net/CharlyBarros/appreciated" target="_blank"><img src="../imgs/iconos/behance_blanco.png" alt="behance" height= "25px" width="auto" class="footer__icons"></a>  
        </div>
        <div class="footer__legales">
         Desarrollado por Mateo de Elias.<br>
