cambios en quien soy

--- a/markup/quiensoy.html
+++ b/markup/quiensoy.html
@@ -94,7 +94,7 @@
                 </ul>
             </div> 
             <div class="section__descargas">
-                <div class="cv"><a href="../imgs/cv_carlosbarros.pdf"></a>Descargar CV</div>
+                <div class="cv"><a href="../archivos/cv_carlosbarros.pdf"></a>Descargar CV</div>
                 <div class="cv"><a href="../archivos/Carlos Barros - Porfolio comprimido.pdf"></a>Portfolio</div>
             </div>
         </div>  
