arreglado descargas de cv y portfolio

--- a/markup/quiensoy.html
+++ b/markup/quiensoy.html
@@ -92,12 +92,16 @@
                     <li>Adobe After Effects</li>
                     <li>Figma</li>
                 </ul>
-            </div> 
-            <div class="section__descargas">
-                <div class="cv"><a href="../archivos/cv_carlosbarros.pdf" download=""></a>Descargar CV</div>
-                <div class="cv"><a href="../archivos/Carlos Barros - Porfolio comprimido.pdf" download=""></a>Portfolio</div>
             </div>
-        </div>  
+            <div class="section__descargas">
+                <div class="cv">
+                    <a href="../archivos/cv_carlosbarros.pdf" download="cv-Carlos Barros">Descargar CV</a>
+                </div>
+                <div class="cv">
+                    <a href="../archivos/Carlos Barros - Porfolio comprimido.pdf" download="Portfolio-Carlos Barros">Portfolio</a>
+                </div>
+            </div>
+        </div>    
     </section>
 
 
