--- a/markup/contacto.html
+++ b/markup/contacto.html
@@ -67,7 +67,7 @@
 
     <main class="contacto__main"><br>
         <h1>Contacto</h1><br>
-        <form class="formulario" method="POST" action="../php/enviar.php">
+        <form class="formulario" method="POST" action="../enviar.php">
             <div class="form-group">
               <label for="exampleFormControlInput1">Nombre y Apellido:</label><br>
               <input type="text" name="nombre" id="exampleFormControlInput1" required>
