arregle link index a contacto

--- a/markup/index.html
+++ b/markup/index.html
@@ -74,7 +74,9 @@
             <div class="color__overlay">
                 <h1>Hola soy Charly Barros,<br>diseñador gráfico freelance.</h1>
                 <p>Creo en el diseño de buena calidad y la atención al detalle. Empezar el trabajo con una idea que luego evolucione a un concepto.</p>
-                <div class="main__contacto"><a href="contacto.html"></a> Contame tu proyecto</div>
+                <div class="main__contacto">
+                    <a href="contacto.html">Contame tu proyecto</a>
+                </div>
             </div>
         </div>
     </main>
