--- a/markup/contacto.html
+++ b/markup/contacto.html
@@ -10,7 +10,7 @@
     
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Charly Barros - Diseñador Gráfico</title>
+    <title>Charly Barros - Contacto</title>
 </head>
 <body>
       <!--Hamburger menu-->
