--- a/markup/servicios.html
+++ b/markup/servicios.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Charly Barros - Diseñador Gráfico</title>
+    <title>Charly Barros - Servicios</title>
 </head>
 <body>
     <!--Hamburger menu-->
