ajustes en mobile

--- a/markup/portfolio.html
+++ b/markup/portfolio.html
@@ -6,6 +6,10 @@
     <meta name="keywords" content="diseño gráfico, graphic design, freelance, diseño de marca, branding, advertisement, publicidad, comunicación, diseño industrial, eventos, diseño para eventos, identidad corporativa">
     <meta name="description" content="Mi nombre es Charly Barros y soy diseñador gráfico. Aquí podés encontrar mi información personal, mi portfolio de trabajos, los servicios que puedo proveer y las formas de contactarme.">
 
+    <!-- Tipografías -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <!-- lightbox CSS -->
     <link rel="stylesheet" href="../css/lightbox.min.css"> 
     
@@ -76,7 +80,7 @@
     </nav>
 
     <main class="main__portfolio">
-        <h1>Portfolio</h1>`
+        <h1>Portfolio</h1>
         <div class="gallery">
             <a href="../imgs/portfolio/dialogos2020-2.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/dialogos2020-2.jpeg" alt="dialogos2"></a>
             <a href="../imgs/portfolio/dialogos2020-1.jpeg" data-lightbox="mygallery"><img src="../imgs/portfolio/dialogos2020-1.jpeg" alt="dialogos1"></a>
