--- a/markup/index.html
+++ b/markup/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="diseño gráfico, graphic design, freelance, diseño de marca, branding, advertisement, publicidad, comunicación, diseño industrial, eventos, diseño para eventos, identidad corporativa">
     <meta name="description" content="Mi nombre es Charly Barros y soy diseñador gráfico. Aquí podés encontrar mi información personal, mi portfolio de trabajos, los servicios que puedo proveer y las formas de contactarme.">
+
+    <!-- Tipografías -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     
      <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
