--- a/markup/servicios.html
+++ b/markup/servicios.html
@@ -6,6 +6,10 @@
     <meta name="keywords" content="diseño gráfico, graphic design, freelance, diseño de marca, branding, advertisement, publicidad, comunicación, diseño industrial, eventos, diseño para eventos, identidad corporativa">
     <meta name="description" content="Mi nombre es Charly Barros y soy diseñador gráfico. Aquí podés encontrar mi información personal, mi portfolio de trabajos, los servicios que puedo proveer y las formas de contactarme.">
     
+    <!-- Tipografías -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
      <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -71,34 +75,34 @@
         <div class="servicios__container">
             <div class="servicios__iconContainer" id="bottom__border">
                 <div class="servicios__iconos" id="right__border">
-                    <img src="../imgs/iconos/Servicios/brand_design.png" alt="diseño_marca" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/brand_design.png" alt="diseño_marca" width="20%"><br>
                     <h3>Diseño de Marca</h3>
                     <p>Identidad corportativa/ diseño de marca personal, diseño de logotipos, manuales de marca, aplicaciones de logo, papelería, merchandising.</p>
                 </div>
                 <div class="servicios__iconos" id="right__border">
-                    <img src="../imgs/iconos/Servicios/diseno_grafico.png" alt="diseño_grafico" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/diseno_grafico.png" alt="diseño_grafico" width="20%"><br>
                     <h3>Diseño Gráfico</h3>
                     <p>Diseño de flyers, catalogos, revistas, presentaciones, diseño editorial, diseños para redes, diseño de packagings.</p>
                 </div>
                 <div class="servicios__iconos">
-                    <img src="../imgs/iconos/Servicios/industrial.png" alt="diseño_industrial" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/industrial.png" alt="diseño_industrial" width="20%"><br>
                     <h3>Diseño Industrial</h3>
                     <p>Diseño, maquetación y renderizado de productos.</p>
                 </div>
             </div>
             <div class="servicios__iconContainer">
                 <div class="servicios__iconos" id="right__border">
-                    <img src="../imgs/iconos/Servicios/event_design.png" alt="diseño_eventos" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/event_design.png" alt="diseño_eventos" width="20%"><br>
                     <h3>Diseños para Eventos</h3>
                     <p>Diseño para eventos socialias y corporativos: logos, cartelería, presentaciones, material audiovisual, zocalos, merchandising, papelería.</p>
                 </div>
                 <div class="servicios__iconos" id="right__border">
-                    <img src="../imgs/iconos/Servicios/desarrollo_web.png" alt="diseño_web" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/desarrollo_web.png" alt="diseño_web" width="20%"><br>
                     <h3>Desarrollo Web</h3>
                     <p>Diseño y maquetación de páginas web responsive, programación de código html, css y php. Contratación de host y compra de dominio. Landing pages, sitios web institucionales y corporativos, blogs.</p>
                 </div>
                 <div class="servicios__iconos">
-                    <img src="../imgs/iconos/Servicios/publicidad.png" alt="publicidad" width="25%"><br>
+                    <img src="../imgs/iconos/Servicios/publicidad.png" alt="publicidad" width="20%"><br>
                     <h3>Publicidad</h3>
                     <p>Diseño de avisos publicitarios, cartelería, diseño y planificación de comunicación corporativa, diseño de campañas para lanzamiento de productos, publicidad en redes.</p>
                 </div>
